crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__def_name_mismatch.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: "value = let\n    x : int\n    y = 1"
---
nash::syntax

  × Expected definition `x`, found `y`.
   ╭─[src/Main.nash:3:5]
 2 │     x : int
 3 │     y = 1
   ·     ─
   ╰────
  help: Use the same name for an annotation and its definition.
