crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__def_name_repeat.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: "value = let\n    x : int\n    "
---
nash::syntax

  × Expected the definition of `x` after its annotation.
   ╭─[src/Main.nash:3:5]
 2 │     x : int
 3 │     
   ·     ─
   ╰────
  help: Repeat the annotated name and add its arguments and body.
