crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__def_reserved_arg.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::Let(&Let::Def(\"x\", &Def::Equals(1, 9), 1, 9), 1, 9),\n\"value = if\")"
---
MISSING EQUALS
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

Expected `=` in the definition of `x`.

Separate the arguments and body with `=`.
