crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__destruct_indent_body.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::Let(&Let::Destruct(&Destruct::IndentBody(1, 9), 1, 9), 1, 9),\n\"value = \")"
---
UNFINISHED DEFINITION
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

I was partway through parsing this definition, but I got stuck here:

I was expecting to see an expression next. What is it equal to?
