crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__destruct_indent_equals.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::Let(&Let::Destruct(&Destruct::IndentEquals(1, 9), 1, 9), 1, 9),\n\"value = \")"
---
MISSING EQUALS
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

Expected `=` after the binding pattern.

Add `=` before the value to destructure.
