crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__destruct_type_annotation.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::Let(&Let::Destruct(&Destruct::Equals(1, 9), 1, 9), 1, 9),\n\"value = :\")"
---
MISSING EQUALS
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

Expected `=` after the binding pattern.

Annotate a named definition; destructuring bindings cannot have annotations.
