crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__do_alignment.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::Do(&Do::Alignment(4, 1, 9), 1, 9), \"value = \")"
---
INDENTATION
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

Do statements must align.

Indent the statement with 4 spaces.
