crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__do_arrow.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::Do(&Do::Arrow(1, 9), 1, 9), \"value = \")"
---
MISSING BIND ARROW
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

Expected `<-` after the binding pattern.

Separate the pattern and computation with `<-`.
