crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__do_indent_expr.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: "value = do\n    x <-\naction"
---
nash::syntax

  × Expected an expression after `<-`.
   ╭─[src/Main.nash:3:1]
 1 │ value = do
 2 │     x <-
 3 │ action
   · ─
   ╰────
  help: Add an indented computation.
