crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__do_indent_stmt.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::Do(&Do::IndentStmt(1, 9), 1, 9), \"value = \")"
---
UNFINISHED DO
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

I was partway through parsing a `do` block, but I got stuck here:

I was expecting an indented statement after `do`.
